# enpm613

./: README.md  api.yaml
docs/: Project Plan and Management.xlsx  Requirements Analysis.docx
shiftchange/: data.db  manage.py  pyproject.toml  schemas.py
shiftchange-ui/: package-lock.json  package.json
shiftchange-ui/src/: App.tsx  api.tsx  icons.tsx  index.tsx  react-app-env.d.ts  styles.tsx  types.tsx  utils.tsx
shiftchange-ui/src/components/: Assignment.tsx  Board.tsx  ClassMaterials.tsx  ClassSelector.tsx  ClassesDropdown.tsx  Column.tsx  Comments.tsx  CourseMaterials.tsx  ExpandablePane.tsx  FilePreview.tsx  KanbanAssignment.tsx  KanbanBoard.tsx  KanbanColumn.tsx  Materials.tsx  MenuBar.tsx  Settings.tsx  SubmissionSelector.tsx  Submissions.tsx  Ticket.tsx  TicketColumn.tsx
shiftchange-ui/src/mocks/: handlers.tsx  mockResponses.tsx
shiftchange-ui/src/pages/: AssignmentPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
shiftchange-ui/src/pages/EnrollPage/: EnrollPage.tsx  EnrollmentAdder.tsx  EnrollmentRemover.tsx
shiftchange-ui/src/pages/ManagementPage/: AssignmentAdder.tsx  AssignmentManager.tsx  AssignmentRemover.tsx  AssignmentStudent.tsx  AssignmentStudents.tsx  Grader.tsx  ManagementPage.tsx  ManagementRadioButtons.tsx  MaterialAdder.tsx  MaterialRemover.tsx  MaterialsManager.tsx
shiftchange-ui/src/resources/: doc.docx
shiftchange/models/: user.py
shiftchange/resources/: user.py
shiftchange/shiftchange/: __init__.py  schemas.py
shiftchange/shiftchange/models/: assignment.py
